--- a/nx-frontend/package.json
+++ b/nx-frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "node server.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.4",
@@ -27,5 +28,9 @@
     "nodemon": "^2.0.15",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "author": "",
+  "license": "ISC"
 }
