--- a/nx-frontend/package.json
+++ b/nx-frontend/package.json
@@ -9,17 +9,23 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.4",
+    "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jquery": "^3.6.0",
     "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "popper.js": "^1.16.1",
+    "vee-validate": "^2.2.15",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
